# main.cpp

./: main.cpp
.github/workflows/: build.ym  build.yml  clang-build.yml
app/: build.gradld
app/src/main/cpp/: CMakeLists.tx  CMakeLists.txt  native-lib.cpp  toolchain.cmake
